; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ffjni.c_ff_jni_exception_check.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_ffjni.c_ff_jni_exception_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 (%struct.TYPE_10__**, i32)*, i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)* }

@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_jni_exception_check(%struct.TYPE_10__** %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.TYPE_10__** %0, %struct.TYPE_10__*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* null, i8** %10, align 8
  %11 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %12, i32 0, i32 3
  %14 = load i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)** %13, align 8
  %15 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %16 = call i32 %14(%struct.TYPE_10__** %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %70

19:                                               ; preds = %3
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %19
  %23 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 1
  %26 = load i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)** %25, align 8
  %27 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %28 = call i32 %26(%struct.TYPE_10__** %27)
  store i32 -1, i32* %4, align 4
  br label %70

29:                                               ; preds = %19
  %30 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 2
  %33 = load i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)** %32, align 8
  %34 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %35 = call i32 %33(%struct.TYPE_10__** %34)
  store i32 %35, i32* %9, align 4
  %36 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 1
  %39 = load i32 (%struct.TYPE_10__**)*, i32 (%struct.TYPE_10__**)** %38, align 8
  %40 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %41 = call i32 %39(%struct.TYPE_10__** %40)
  %42 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %43 = load i32, i32* %9, align 4
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @ff_jni_exception_get_summary(%struct.TYPE_10__** %42, i32 %43, i8** %10, i8* %44)
  store i32 %45, i32* %8, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %56

47:                                               ; preds = %29
  %48 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 0
  %51 = load i32 (%struct.TYPE_10__**, i32)*, i32 (%struct.TYPE_10__**, i32)** %50, align 8
  %52 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %53 = load i32, i32* %9, align 4
  %54 = call i32 %51(%struct.TYPE_10__** %52, i32 %53)
  %55 = load i32, i32* %8, align 4
  store i32 %55, i32* %4, align 4
  br label %70

56:                                               ; preds = %29
  %57 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %58 = load %struct.TYPE_10__*, %struct.TYPE_10__** %57, align 8
  %59 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %58, i32 0, i32 0
  %60 = load i32 (%struct.TYPE_10__**, i32)*, i32 (%struct.TYPE_10__**, i32)** %59, align 8
  %61 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %62 = load i32, i32* %9, align 4
  %63 = call i32 %60(%struct.TYPE_10__** %61, i32 %62)
  %64 = load i8*, i8** %7, align 8
  %65 = load i32, i32* @AV_LOG_ERROR, align 4
  %66 = load i8*, i8** %10, align 8
  %67 = call i32 @av_log(i8* %64, i32 %65, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %66)
  %68 = load i8*, i8** %10, align 8
  %69 = call i32 @av_free(i8* %68)
  store i32 -1, i32* %4, align 4
  br label %70

70:                                               ; preds = %56, %47, %22, %18
  %71 = load i32, i32* %4, align 4
  ret i32 %71
}

declare dso_local i32 @ff_jni_exception_get_summary(%struct.TYPE_10__**, i32, i8**, i8*) #1

declare dso_local i32 @av_log(i8*, i32, i8*, i8*) #1

declare dso_local i32 @av_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
